2011-07-23  Alok Priyadarshi  <alokp@chromium.org>

        Switching off acceleration for small canvas broke gpu tests
        https://bugs.webkit.org/show_bug.cgi?id=65053

        Reviewed by Stephen White.

        * DumpRenderTree/chromium/WebPreferences.cpp:
        (WebPreferences::reset):
        (WebPreferences::applyTo):
        * DumpRenderTree/chromium/WebPreferences.h:

2011-07-23  Keith Kyzivat  <keith.kyzivat@nokia.com>

        [Qt] Add option to turn on disk caching in QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=65007

        Reviewed by Noam Rosenthal.

        Add menu item and command line option to turn on disk caching in
        QtTestBrowser. Simple QNetworkDiskCache added to the page's
        QNetworkAccssManager.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::initializeView):
        (LauncherWindow::createChrome):
        (LauncherWindow::setDiskCache):
        * QtTestBrowser/launcherwindow.h:
        (WindowOptions::WindowOptions):
        * QtTestBrowser/main.cpp:
        (LauncherApplication::handleUserOptions):

2011-07-22  Ojan Vafai  <ojan@chromium.org>

        Don't match 'DEBUG' when trying to filter BUG modifiers.
        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:

2011-07-22  Ojan Vafai  <ojan@chromium.org>

        Fix issue loading gtests since there's no g_expectations.
        Also, make filing a bug file a webkit.org bug, not a crbug since
        the link is only shown for layout tests.
        * TestResultServer/static-dashboards/dashboard_base.js:
        * TestResultServer/static-dashboards/flakiness_dashboard.html:

2011-07-22  Ojan Vafai  <ojan@chromium.org>

        pull test expectations into the dashboard from wvn.webkit.org
        https://bugs.webkit.org/show_bug.cgi?id=65054

        Reviewed by Adam Barth.
